--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <div class="overlay">
             <div class="text">
                 <h1 class="title white">
-                    Hello Github!
+                    Hello Hackbots!
                 </h1>
-                <p>your-name</p>
-                <p>your-age</p>
-                <p>your-batch</p>
-                <p>your-degree</p>
+                <p>Kanchana</p>
+                <p>21</p>
+                <p>19.1</p>
+                <p>Networking</p>
                 <h3 class="sub white" style="font-family: 'Indie Flower', cursive;">
                     I love Open Source Projects
                 </h3>
